# wasp_deep_learning_for_natural_language_processing_2024

./: .gitignore  README.md  docki.yaml  pyproject.toml  requirements.txt
assignments/: assignment-2.ipynb  assignment-3.ipynb
environment/: base-packages.sh  requirements.txt
exercises/: Preprocessing-and-text-classification.ipynb  Using_open_large_language_models.ipynb  parameter-efficient-finetuning.ipynb
project/: Exercise_1_1_(2024).ipynb  Exercise_1_2_(2024).ipynb  Introduction-to-BERT.ipynb  assignment-1.ipynb  helloworld.py
