[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[assignments]
name = "wasp_nlp_2024"
version = "0.0.0"
authors = [
    {name = "Arturas Aleksandraus", email = "arturas@aleksandraus.se"},
    {name = "Nithesh Chandher Karthikeyan", email = "nithesh.chandher1997@gmail.com"},
]

description = "Assignments for WASP Deep Learning for NLP 2024 course"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ML", "PyTorch", "TTD", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["assignments"]
